--- a/MyRuns2ActionTab/app/src/main/res/layout/activity_map.xml
+++ b/MyRuns2ActionTab/app/src/main/res/layout/activity_map.xml
@@ -3,39 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.yuzhong.myruns2actiontab.MapActivity">
 
+
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:id="@+id/map_bottom_buttons"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_margin="5dp"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SAVE"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            android:padding="10dip"
+            android:onClick="onMapSaveButtonClick"
+            android:id="@+id/map_save_button" />
+
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:id="@+id/SaveButton"
-            android:layout_weight="0.5"
+            android:text="CANCEL"
+            android:layout_weight="1"
             android:layout_gravity="bottom"
-            android:layout_marginRight="10dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:id="@+id/CancelButton"
-            android:layout_weight="0.5"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="10dp" />
+            android:padding="10dip"
+            android:onClick="onMapCancelButtonClick"
+            android:id="@+id/map_cancel_button" />
     </LinearLayout>
-
 </RelativeLayout>
