--- a/MyRuns2ActionTab/app/src/main/res/layout/activity_profile.xml
+++ b/MyRuns2ActionTab/app/src/main/res/layout/activity_profile.xml
@@ -91,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:singleLine="true"
+                    android:inputType="textEmailAddress"
                     android:imeOptions="actionNext"
                     android:hint="@string/your_email" />
 
