--- a/MyRuns2ActionTab/app/src/main/res/layout/fragment_start.xml
+++ b/MyRuns2ActionTab/app/src/main/res/layout/fragment_start.xml
@@ -1,7 +1,12 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.example.yuzhong.myruns2actiontab.StartFragment"
     android:orientation="vertical">
 
@@ -66,3 +71,4 @@
         android:layout_marginTop="20dp" />
 
 </LinearLayout >
+</ScrollView>
