--- a/MyRuns2ActionTab/app/src/main/res/layout/start_fragment.xml
+++ b/MyRuns2ActionTab/app/src/main/res/layout/start_fragment.xml
@@ -1,7 +1,14 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="20dp"
+    android:padding="20dp">
+
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.example.yuzhong.myruns2actiontab.StartFragment"
     android:orientation="vertical">
 
@@ -68,3 +75,6 @@
         android:layout_marginTop="20dp" />
 
 </LinearLayout >
+
+
+</ScrollView>
